
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct nm_send_arg_int {int uint4; int uint3; int int1; int uint2; int uint1; int string1; } ;
typedef int bool_t ;
typedef int XDR ;


 int FALSE ;
 int TRUE ;
 int xdr_int (int *,int *) ;
 int xdr_u_int (int *,int *) ;
 int xdr_wrapstring (int *,int *) ;

bool_t
xdr_nm_send_arg_int(XDR *xdrs, struct nm_send_arg_int *objp)
{
    if (!xdr_wrapstring(xdrs, &objp->string1))
 return (FALSE);
    if (!xdr_u_int(xdrs, &objp->uint1))
 return (FALSE);
    if (!xdr_u_int(xdrs, &objp->uint2))
 return (FALSE);
    if (!xdr_int(xdrs, &objp->int1))
 return (FALSE);
    if (!xdr_u_int(xdrs, &objp->uint3))
 return (FALSE);
    if (!xdr_u_int(xdrs, &objp->uint4))
 return (FALSE);
    return (TRUE);
}
